# agr_abc_document_parsers

./: .gitignore  CLAUDE.md  Makefile  README.md  TODO.md  TODO_pmc_edge_cases.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: nxml-parser-gap-analysis.md
docs/plans/: 2026-03-09-library-implementation-plan.md  2026-03-12-content-parity-plan.md
docs/specs/: 2026-03-12-content-parity-and-ci-design.md  2026-03-12-secondary-abstracts-sub-articles-design.md
src/agr_abc_document_parsers/: MARKDOWN_SCHEMA.md  __init__.py  converter.py  jats_parser.py  md_emitter.py  md_reader.py  md_validator.py  models.py  plain_text.py  tei_parser.py  xml_utils.py
tests/: agr_infra_helpers.py  conftest.py  pmc_fixed_articles.txt  pmc_parity_helpers.py  test_agr_nxml_conversion.py  test_converter.py  test_jats_parser.py  test_md_emitter.py  test_md_reader.py  test_md_validator.py  test_models.py  test_plain_text.py  test_pmc_conversion.py  test_tei_conversion.py  test_tei_parser.py
