[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agr-abc-document-parsers"
version = "1.2.1"
description = "Shared parsers, emitters, and validators for the AGR ABC Markdown document format"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Alliance of Genome Resources" }
]
keywords = [
    "agr",
    "bioinformatics",
    "markdown",
    "jats",
    "tei",
    "xml",
    "document-parsing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "lxml-stubs>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/alliance-genome/agr_abc_document_parsers"
Documentation = "https://github.com/alliance-genome/agr_abc_document_parsers#readme"
Repository = "https://github.com/alliance-genome/agr_abc_document_parsers.git"
Issues = "https://github.com/alliance-genome/agr_abc_document_parsers/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agr_abc_document_parsers"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["agr_abc_document_parsers"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["webtest: tests that require network access to PMC (deselected by default)"]
addopts = "-m 'not webtest'"

[tool.coverage.run]
source = ["src/agr_abc_document_parsers"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
